[gd_scene load_steps=2 format=3 uid="uid://b2ofrhjbtrwct"]

[ext_resource type="Script" uid="uid://ddd81j6t86iem" path="res://test/QuestEncounterNode.gd" id="1_a0iji"]

[node name="QuestEncounterNode" type="GraphNode"]
offset_left = 496.0
offset_top = 232.0
offset_right = 811.0
offset_bottom = 533.0
mouse_filter = 1
position_offset = Vector2(496, 232)
title = "Quest Encounter"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("1_a0iji")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Name:"

[node name="NameEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="RepeatableCheckBox" type="CheckBox" parent="VBoxContainer"]
unique_name_in_owner = true
layout_direction = 3
layout_mode = 2
text = "Repeatable?"

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Description:"

[node name="DescriptionEdit" type="TextEdit" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3

[node name="DataContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="Label2" type="Label" parent="VBoxContainer/DataContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Monsters:"

[node name="MonstersEdit" type="LineEdit" parent="VBoxContainer/DataContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label3" type="Label" parent="VBoxContainer/DataContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Items:"

[node name="ItemsEdit" type="LineEdit" parent="VBoxContainer/DataContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
